WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26458
wx port memory leak in ImageSource::setData
https://bugs.webkit.org/show_bug.cgi?id=26458
Summary
wx port memory leak in ImageSource::setData
Kevin Watters
Reported
2009-06-16 15:10:14 PDT
ImageSource::setData in platform/graphics/wx/ImageSourceWx.cpp assigns the value of createDecoder to m_decoder without deleting an old one, if it's there.
Attachments
adds missing "delete m_decoder"
(1.17 KB, patch)
2009-06-16 15:10 PDT
,
Kevin Watters
kevino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Watters
Comment 1
2009-06-16 15:10:50 PDT
Created
attachment 31380
[details]
adds missing "delete m_decoder"
Kevin Ollivier
Comment 2
2009-06-16 23:13:43 PDT
Landed in
r44754
, thanks! :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug