Reviewed by Kevin Ollivier.

In ImageSource::setData, delete the old m_encoder before replacing it with a new one.

https://bugs.webkit.org/show_bug.cgi?id=26458


Canonical link: https://commits.webkit.org/36569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44754 268f45cc-cd09-0410-ab3c-d52691b4dbfc