WebCore/platform/graphics/wx/ImageSourceWx.cpp
@@ -110,6 +110,8 @@ void ImageSource::setData(SharedBuffer* data, bool allDataReceived)
     // This method will examine the data and instantiate an instance of the appropriate decoder plugin.
     // If insufficient bytes are available to determine the image type, no decoder plugin will be
     // made.
+    if (m_decoder)
+        delete m_decoder;
     m_decoder = createDecoder(*data);
     if (!m_decoder)
         return;
